lib/libui/bottom_pane/chat_composer/snapshots/libui__bottom_pane__chat_composer__tests__footer_collapse_empty_full.snap
---
source: lib/libui/bottom_pane/chat_composer/tests.rs
expression: "render_test_backend_debug(width, height, |f|\n{ composer.render(f.area(), f.buffer_mut()); })"
---
"                                                                                                                        "
"› Ask FreeChaOS to do anything                                                                                          "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"  ? for shortcuts · Default (shift+tab to cycle)                                                     100% context left  "
