lib/libui/bottom_pane/chat_composer/snapshots/libui__bottom_pane__chat_composer__tests__footer_collapse_plan_empty_mode_only.snap
---
source: lib/libui/bottom_pane/chat_composer/tests.rs
expression: "render_test_backend_debug(width, height, |f|\n{ composer.render(f.area(), f.buffer_mut()); })"
---
"                          "
"› Ask FreeChaOS to do any "
"                          "
"                          "
"                          "
"                          "
"                          "
"                          "
"  Plan                    "
